<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@color/title_color"
        android:text="@string/problem_list"
        />
    <ListView
        android:id="@+id/lv_problem_list_problems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.76"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/tv_problem_list_counts"
        android:gravity="left|center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:layout_marginLeft="10dp"
        android:textSize="15dp"
        android:text="设备问题数：5；非设备问题数：1"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="8dp" />

    <RadioGroup
        android:id="@+id/rg_problem_list_choose"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08">
        <RadioButton
            android:id="@+id/rb_choose_device"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_device"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_choose_non_device"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose_non_device"/>
        <Button
            android:id="@+id/btn_problem_list_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/btn_register"
            android:background="#EEE685"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            />

    </RadioGroup>


</LinearLayout>
