<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sdust.insapp.activity.HistoryDataChartActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">
    <TextView
        android:id="@+id/tv_history_data_chart_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="0dp"
        android:layout_marginLeft="8dp"
        style="@style/titleStyle"
        android:text="@string/history_data_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/line_chart_history_data_chart_main"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_history_data_chart_change_to_grid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btn_history_data_chart_change_to_grid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="切换到表格查看"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/rg_history_data_chart_choose_group"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/line_chart_history_data_chart_main"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_history_data_chart_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RadioButton
            android:id="@+id/rb_history_data_chart_tempe"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/temperature"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rb_history_data_chart_speed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/speed"
            />

        <RadioButton
            android:id="@+id/rb_history_data_chart_acce"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/acceleration" />
        <RadioButton
            android:id="@+id/rb_history_data_chart_vibra"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/vibration" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
