<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sdust.insapp.activity.DeviceInfoActivity">

    <TextView
        android:id="@+id/tv_device_info_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        style="@style/titleStyle"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="设备GPD-1信息"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_device_info_history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="温度"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="速度"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="加速度"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="位移"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_device_info_history"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        style="@style/buttonStyle"
        android:background="@drawable/deviceinfobutton"
        android:text="@string/btn_history_data"
        android:layout_marginTop="4dp"

        app:layout_constraintTop_toBottomOf="@+id/tv_device_info_title"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"

        app:layout_constraintRight_toRightOf="parent" />

    <ListView
        android:id="@+id/lv_device_info_data"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_margin="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_device_info_observation_points_info" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"

        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_goneMarginBottom="0dp">

        <Button
            android:id="@+id/btn_device_info_survey"
            style="@style/buttonStyle"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/deviceinfobutton"
            android:enabled="false"
            android:text="@string/btn_survey" />

        <Button
            android:id="@+id/btn_device_info_save"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/deviceinfobutton"
            android:enabled="true"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_device_info_clean"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/deviceinfobutton"
            android:enabled="true"
            android:text="@string/btn_clean" />

        <Button
            android:id="@+id/btn_device_info_skip"
            style="@style/buttonStyle"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/deviceinfobutton"
            android:text="@string/btn_skip" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_device_info_conn_bluet"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/deviceinfobutton"
        android:text="@string/btn_connect"
        app:layout_constraintTop_toTopOf="@+id/btn_device_info_history"
        app:layout_constraintRight_toLeftOf="@+id/btn_device_info_history"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_text"
        app:layout_constraintTop_toTopOf="@+id/tv_device_info_bluet_conn_status"
        app:layout_constraintBottom_toBottomOf="@+id/tv_device_info_bluet_conn_status"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_device_info_bluet_conn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_connection"
        app:layout_constraintBottom_toBottomOf="@+id/btn_device_info_conn_bluet"
        app:layout_constraintTop_toTopOf="@+id/btn_device_info_conn_bluet"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <ListView
        android:id="@+id/lv_device_info_observation_points_info"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_margin="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
