<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/user_logined"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_toolbar_background_red"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_frag_me_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="我的信息"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/tv_frag_me_add"
            style="@style/style_item_mefragment"
            android:text="@string/tv_me_fragment_add"
            />
       <!-- <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/right"
            />-->
    </RelativeLayout>
    <TextView
        android:visibility="gone"
        android:layout_marginLeft="11dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D9D9D9"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:visibility="gone">

        <Button
            android:id="@+id/tv_frag_me_mesg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/color_text_blank_800"
            android:text="@string/tv_me_frag_message"  />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_frag_me_setting"
            style="@style/style_item_mefragment"
            android:text="@string/string_me_frag_setting"
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/right"/>
    </RelativeLayout>
    <TextView
        android:layout_marginLeft="11dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D9D9D9"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/tv_frag_me_loginout"
            style="@style/style_item_mefragment"
            android:text="@string/string_me_frag_loginout"
            />
        <TextView
            android:visibility="gone"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/right"/>
    </RelativeLayout>


</LinearLayout>