<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sdust.insapp.activity.InspectionActivity">

    <TextView
        android:id="@+id/tv_inspection_title"
        style="@style/titleStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ins_order_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_inspection_title" />

    <ListView
        android:id="@+id/lv_inspection_order_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </ListView>

    <TextView
        android:visibility="invisible"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/btn_inspection_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_inspection_start"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_start_ins"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_inspection_upload"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_inspection_upload"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_upload_data"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_inspection_start" />

</android.support.design.widget.CoordinatorLayout>
